Fixed spacing

--- a/style.css
+++ b/style.css
@@ -939,7 +939,8 @@ textarea.w-input, textarea.w-select {
   }
 
   .padding-xhuge {
-    padding: 3rem 10rem 2rem !important;
+    padding-top: 5rem;
+    padding-bottom: 2rem;
   }
 }
 
@@ -6302,7 +6303,8 @@ blockquote {
   }
 
   .padding-xhuge {
-    padding: 5rem 10rem 2rem;
+    padding-top: 5rem;
+    padding-bottom: 2rem;
   }
 
   .margin-bottom {
